--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -617,32 +617,4 @@ CONFIG_CRYPTO_AES_ARM_BS=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_HW is not set
-
-# BuffCore
-CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_LOW_CPUCLOCKS=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_CPU_VOLTAGE_TABLE=y
-CONFIG_AUTOSMP=y
-CONFIG_MSM_CPUFREQ_LIMITER=y
-
-CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_BIC=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_VEGAS=y
-CONFIG_TCP_CONG_SCALABLE=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_VENO=y
-CONFIG_TCP_CONG_YEAH=y
-CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
-
- CONFIG_IOSCHED_FIOPS=y
- CONFIG_IOSCHED_ZEN=y
-#CONFIG_DEFAULT_ZEN is not set
-
-CONFIG_IOSCHED_TRIPNDROID=y
-#CONFIG_DEFAULT_TRIPNDROID is not set
-CONFIG_IOSCHED_DEADLINE=y
+#dummyyyy
