--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -637,8 +637,8 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
 
 # CONFIG_QUICK_WAKEUP is not set
-CONFIG_HAVE_KERNEL_GZIP=y
-CONFIG_KERNEL_GZIP=y
+#CONFIG_HAVE_KERNEL_GZIP is not set
+#CONFIG_KERNEL_GZIP is not set
 CONFIG_STATE_NOTIFIER=y
 CONFIG_INTELLI_PLUG=y
 
