--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -274,7 +274,7 @@ CONFIG_BT_HIDP=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_CFG80211=y
-CONFIG_NL80211_TESTMODE=y
+# CONFIG_NL80211_TESTMODE is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_WIRELESS_EXT_SYSFS=y
 CONFIG_CFG80211_ALLOW_RECONNECT=y
