--- a/include/sound/Kbuild
+++ b/include/sound/Kbuild
@@ -1,5 +1,6 @@
 header-y += asequencer.h
 header-y += asound.h
+header-y += a2220.h
 header-y += asound_fm.h
 header-y += emu10k1.h
 header-y += hdsp.h
