--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -335,6 +335,7 @@ header-y += reiserfs_fs.h
 header-y += reiserfs_xattr.h
 header-y += resource.h
 header-y += rfkill.h
+header-y += rmnet_data.h
 header-y += romfs_fs.h
 header-y += rose.h
 header-y += route.h
