--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -293,14 +293,14 @@ CONFIG_BCM2079X_NFC_I2C=y
 CONFIG_UID_CPUTIME=y
 CONFIG_BLUEDROID_PM=y
 CONFIG_SCSI=y
-CONFIG_SCSI_TGT=y
+# CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
-CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
+# CONFIG_CHR_DEV_SG=y
+# CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
-CONFIG_SCSI_SCAN_ASYNC=y
+# CONFIG_SCSI_CONSTANTS=y
+# CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
