--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -78,7 +78,7 @@ CONFIG_MSM_HSIC_GPIO_REV06=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
-CONFIG_MSM_WATCHDOG=y
+# CONFIG_MSM_WATCHDOG is not set
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_BT_BCM4335=y
 CONFIG_MSM_RTB=y
