--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -681,4 +681,6 @@ CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y 
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 
+CONFIG_CPU_FREQ_GOV_COMMON=y
+
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
