--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -642,8 +642,8 @@ CONFIG_MSM_CPUFREQ_LIMITER=m
 CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
-CONFIG_CPU_OVERCLOCK=y
-CONFIG_GPU_OVERCLOCK=y
+# CONFIG_CPU_OVERCLOCK is not set
+# CONFIG_GPU_OVERCLOCK is not set
 CONFIG_LOW_CPUCLOCKS=y
 CONFIG_GPU_VOLTAGE_TABLE=y
 
