--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -619,7 +619,7 @@ CONFIG_LIBCRC32C=y
 #Custom edits
 # CONFIG_HOTPLUG_CPU is not set
 CONFIG_HOTPLUG=y
-CONFIG_DECOMPRESS_LZMA=y
+# CONFIG_DECOMPRESS_LZMA=y
 # CONFIG_AUTOSMP is not set
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 # CONFIG_QUICK_WAKEUP is not set
@@ -630,7 +630,6 @@ CONFIG_IOSCHED_ZEN=y
 #CONFIG_DEFAULT_ZEN is not set
 #CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_CC_OPTIMIZE_FOR_SPEED=y
-CONFIG_MSM_CPUFREQ_LIMITER=m
 #CONFIG_CPU_OVERCLOCK is not set
 #CONFIG_OC_ULTIMATE is not set
 CONFIG_IOSCHED_CFQ=y
