--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -724,4 +724,5 @@ CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 
+# Powersuspend lib
 CONFIG_POWERSUSPEND=y
