--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -1,4 +1,5 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_LOCALVERSION="-BuffCore-v1-rebasing"
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_KERNEL_XZ=y
