--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -626,3 +626,16 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_AUTOSMP=y
 CONFIG_MSM_CPUFREQ_LIMITER=y
+
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
