--- a/arch/arm/configs/lineageos_jf_defconfig
+++ b/arch/arm/configs/lineageos_jf_defconfig
@@ -2,7 +2,7 @@
 CONFIG_LOCALVERSION="-BuffCore-v1-rebasing"
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
-CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_XZ is not defined
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
