--- a/arch/arm/configs/buff_jf_defconfig
+++ b/arch/arm/configs/buff_jf_defconfig
@@ -623,6 +623,7 @@ CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CMA is not set
