--- a/arch/arm/configs/side_jf_defconfig
+++ b/arch/arm/configs/side_jf_defconfig
@@ -11,6 +11,7 @@ CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
+CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
@@ -259,12 +260,14 @@ CONFIG_BT_HIDP=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_CFG80211=y
+CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_WIRELESS_EXT_SYSFS=y
 CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_RFKILL=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
+CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
@@ -278,8 +281,12 @@ CONFIG_UID_CPUTIME=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
+CONFIG_CHR_DEV_SG=y
+CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-
+CONFIG_SCSI_CONSTANTS=y
+CONFIG_SCSI_LOGGING=y
+CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
@@ -528,6 +535,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_PM8XXX=y
 CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
+CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_RAM_CONSOLE=y
@@ -603,9 +611,9 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
-# CONFIG_MSM_WATCHDOG is not set
+CONFIG_MSM_WATCHDOG=y
 CONFIG_SCHED_FREQ_INPUT=y
-# CONFIG_PM_DEBUG is not set
+CONFIG_PM_DEBUG=y
 CONFIG_TCP_CONG_SCALABLE=y
 CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
@@ -613,13 +621,6 @@ CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_WESTWOOD=y
-# CONFIG_NL80211_TESTMODE is not set
-# CONFIG_CMA is not set
-# CONFIG_CHR_DEV_SG is not set
-# CONFIG_CHR_DEV_SCH is not set
-# CONFIG_SCSI_CONSTANTS is not set
-# CONFIG_SCSI_LOGGING is not set
-# CONFIG_SCSI_SCAN_ASYNC is not set
 CONFIG_HOTPLUG=y
 
 ##########################################################
@@ -725,7 +726,6 @@ CONFIG_ATAGS_PROC=y
 CONFIG_ZRAM=y
 CONFIG_ZCACHE=y
 CONFIG_ZSMALLOC=y
-CONFIG_STAGING=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 
 # Sleep/wake stuff
