--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -617,5 +617,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 
 ###################################
 # BuffCore
+CONFIG_FORCE_FAST_CHARGE=y
 
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.0"
