--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -45,7 +45,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_NOOP is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -622,5 +622,6 @@ CONFIG_FORCE_FAST_CHARGE=y
 # Custom ioscheds
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_DEFAULT_DEADLINE=y
 
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.0"
