--- a/arch/arm/configs/jdc_jf_defconfig
+++ b/arch/arm/configs/jdc_jf_defconfig
@@ -619,6 +619,7 @@ CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_DEADLINE=y
 
+# Governors
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
@@ -652,5 +653,19 @@ CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+
+# TCP
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 
 CONFIG_LOCALVERSION="-JDCTeam-BuffCore_10.0"
